AM_CFLAGS = -Werror -Wall -Wextra -pedantic -std=gnu99 \
	-Wno-pointer-sign

COMMON_FLAGS = $(AM_CFLAGS) $(LIBXML_CFLAGS) \
	$(GNUTLS_CFLAGS) $(LIBDANE_CFLAGS) $(OPENSSL_CFLAGS) \
	$(GSASL_CFLAGS) $(UNBOUND_CFLAGS) $(CARES_CFLAGS) $(GPGME_CFLAGS) \
	$(ICU_I18N_CFLAGS) $(LIBGCRYPT_CFLAGS) $(CURL_CFLAGS) \
	$(NICE_CFLAGS) $(GLIB_CFLAGS) $(SRTP_CFLAGS) \
	-I$(top_srcdir)/src
COMMON_LIBS = $(LIBXML_LIBS) \
	$(GNUTLS_LIBS) $(LIBDANE_LIBS) $(OPENSSL_LIBS) \
	$(GSASL_LIBS) $(UNBOUND_LIBS) $(CARES_LIBS) $(GPGME_LIBS) $(ICU_I18N_LIBS) \
	$(LIBGCRYPT_LIBS) $(CURL_LIBS) $(NICE_LIBS) $(GLIB_LIBS) $(SRTP_LIBS) \
	-L$(top_builddir)/src -lrexmpp

send_to_self_CFLAGS = $(COMMON_FLAGS)
send_to_self_LDADD = $(COMMON_LIBS)

check_PROGRAMS = send_to_self
TESTS = send_to_self
